# cumem_allocator

./: .gitignore  CMakeLists.txt  README.md  setup.py  test.py
cumem_allocator/: __init__.py  cuda_wrapper.py  cumem.py
